--- a/Tools/3dsmaxExport/scripts/ogre/ogreScript.ini
+++ b/Tools/3dsmaxExport/scripts/ogre/ogreScript.ini
@@ -3,12 +3,13 @@ XMLConverterPath=e:\C++\ogrenew\Tools\XMLConverter\bin\Debug
 MediaPath=E:\C++\ogrenew\Samples\Media
 
 [Exe]
-XMLConverterExe=OgreXMLconverter.exe
+XMLConverterExe=XMLconverter.exe
 
 [Settings]
-lastFile=e:\C++\ogrenew\Tools\XMLConverter\bin\Debug\bbb
+lastFile=e:\C++\ogrenew\Tools\XMLConverter\bin\Debug\test
 lastAnimName=walk
-lastMaterialFile=E:\C++\ogrenew\Samples\Media\3ds.material
+lastMaterialFile=E:\C++\ogrenew\Samples\Media\test.material
 
 [Tools]
-runXMLConverter=no
+runXMLConverter=yes
+
