Added DirectX9 HLSL support. Required the addition of a 'transpose matrices' flag on the gpu program parameters since HLSL code accesses the matrices just like standard D3D ie the 'wrong' way. A person using assembler to write a shader which did the same would have to flip this flag too.

--- a/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
+++ b/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
@@ -147,6 +147,12 @@
 				RelativePath="..\src\OgreD3D9GpuProgramManager.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreD3D9HLSLProgram.cpp">
+			</File>
+			<File
+				RelativePath="..\src\OgreD3D9HLSLProgramFactory.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreD3D9HardwareBufferManager.cpp">
 			</File>
 			<File
@@ -194,6 +200,12 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9GpuProgramManager.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreD3D9HLSLProgram.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreD3D9HLSLProgramFactory.h">
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9HardwareBufferManager.h">
