Refactored the core rendering loop; it and the FrameListener calls are now implemented directly in Root, with only a couple of simpler call-outs to RenderSystem for the actual rendering. This has eliminated a lot of duplicate code, as well as making it possible for external loops to raise frame events by calling Root's _fireFrameStarted and _fireFrameEnded, something that has been a limitation for a little while.

--- a/OgreMain/scripts/OgreMain.vcproj
+++ b/OgreMain/scripts/OgreMain.vcproj
@@ -39,7 +39,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="kernel32.lib zlib.lib freetype.lib $(NOINHERIT)"
+				AdditionalDependencies="kernel32.lib zlib.lib freetype.lib user32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/OgreMain.dll"
 				Version="0.99"
 				LinkIncremental="2"
@@ -58,7 +58,8 @@
 			<Tool
 				Name="VCPostBuildEventTool"
 				CommandLine="copy $(OutDir)\$(TargetFileName) ..\..\Samples\Common\bin\$(ConfigurationName)
-copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)"/>
+copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)
+"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
@@ -105,7 +106,7 @@ copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)"/>
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="kernel32.lib zlib.lib freetype.lib $(NOINHERIT)"
+				AdditionalDependencies="kernel32.lib zlib.lib freetype.lib user32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/OgreMain.dll"
 				Version="0.99"
 				LinkIncremental="1"
@@ -125,7 +126,8 @@ copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)"/>
 			<Tool
 				Name="VCPostBuildEventTool"
 				CommandLine="copy $(OutDir)\$(TargetFileName) ..\..\Samples\Common\bin\$(ConfigurationName)
-copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)"/>
+copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)
+"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
