--- a/Mac/XCode/Samples/resources.cfg
+++ b/Mac/XCode/Samples/resources.cfg
@@ -1,3 +1,4 @@
+FileSystem=../../../../../../../../Samples/Media/Mac
 Zip=../../../../../../../../Samples/Media/dragon.zip
 Zip=../../../../../../../../Samples/Media/knot.zip
 Zip=../../../../../../../../Samples/Media/skybox.zip
