ATI Fragment Shader parser for older ATI cards.  Thanks to nfz (Jeff Doyle). SF Patch #876538

--- a/RenderSystems/GL/include/Makefile.am
+++ b/RenderSystems/GL/include/Makefile.am
@@ -2,10 +2,11 @@ noinst_HEADERS = OgreGLPrerequisites.h \
                  OgreGLGpuProgram.h \
                  OgreGLGpuNvparseProgram.h \
                  OgreGLGpuProgramManager.h \
-		 OgreGLRenderSystem.h \
+                 OgreGLRenderSystem.h \
                  OgreGLSupport.h \
                  OgreGLTexture.h \
                  OgreGLTextureManager.h \
+                 OgreGLATIFSInit.h \
                  OgreSDLGLSupport.h \
-		 OgreSDLPrerequisites.h \
+                 OgreSDLPrerequisites.h \
                  OgreSDLWindow.h
