--- a/trunk/RenderSystems/GL/src/Makefile.am
+++ b/trunk/RenderSystems/GL/src/Makefile.am
@@ -1,14 +1,16 @@
 INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/RenderSystems/GL/include \
            -I$(top_srcdir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
            -I$(top_srcdir)/PlatformManagers/$(OGRE_PLATFORM)/include \
-           -I$(top_srcdir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT) -I./nvparse
+           -I$(top_srcdir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT) -I./nvparse \
+           -I$(top_srcdir)/RenderSystems/GL/src/atifs/include
 
 DIST_SUBDIRS = gtk SDL win32
-SUBDIRS = $(OGRE_GLSUPPORT) nvparse
+SUBDIRS = $(OGRE_GLSUPPORT) nvparse atifs
 
 pkglib_PROGRAMS = RenderSystem_GL.so
 
-RenderSystem_GL_so_SOURCES = OgreGLEngineDll.cpp \
+RenderSystem_GL_so_SOURCES = OgreGLATIFSInit.cpp \
+                             OgreGLEngineDll.cpp \
                              OgreGLGpuProgram.cpp \
                              OgreGLGpuNvparseProgram.cpp \
                              OgreGLGpuProgramManager.cpp \
@@ -24,4 +26,5 @@ RenderSystem_GL_so_SOURCES = OgreGLEngineDll.cpp \
 RenderSystem_GL_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_builddir)/OgreMain/src
 RenderSystem_GL_so_LDADD = $(GL_LIBS) $(GLSUPPORT_LIBS) -lOgreMain \
     $(top_builddir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)/libsupport.a \
-    $(top_builddir)/RenderSystems/GL/src/libnvparse.a
+    $(top_builddir)/RenderSystems/GL/src/libnvparse.a \
+    $(top_builddir)/RenderSystems/GL/src/atifs/src/libatifs.a
