--- a/OgreMain/src/Makefile.am
+++ b/OgreMain/src/Makefile.am
@@ -30,6 +30,7 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreDDSCodec.cpp \
                          OgreDynLib.cpp \
                          OgreDynLibManager.cpp \
+                         OgreEdgeListBuilder.cpp \
                          OgreEntity.cpp \
                          OgreEventDispatcher.cpp \
                          OgreEventMulticaster.cpp \
