A little refactoring: - Add ShadowCaster abstraction so custom classes can add their own shadow support - Allow SceneManager subclasses to have more control over the process of locating lights and shadow casters

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -146,6 +146,7 @@ OgreSceneQuery.h \
 OgreScrollEvent.h \
 OgreScrollTarget.h \
 OgreSerializer.h \
+OgreShadowCaster.h \
 OgreSharedPtr.h \
 OgreSimpleRenderable.h \
 OgreSimpleSpline.h \
