--- a/OgreMain/scripts/OgreMain.vcproj
+++ b/OgreMain/scripts/OgreMain.vcproj
@@ -504,6 +504,9 @@ copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)
 				RelativePath="..\src\OgreSerializer.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreShadowCaster.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreSimpleRenderable.cpp">
 			</File>
 			<File
