--- a/trunk/OgreMain/include/Makefile.am
+++ b/trunk/OgreMain/include/Makefile.am
@@ -113,6 +113,7 @@ OgrePass.h \
 OgrePatchMesh.h \
 OgrePatchSurface.h \
 OgrePlane.h \
+OgrePlaneBoundedVolume.h \
 OgrePlatform.h \
 OgrePlatformManager.h \
 OgrePositionTarget.h \
