Added PlaneBoundedVolume class Added Light::_getNearClipVolume for use when checking if shadow is cast on the viewport (which will result in zfail stencil approach being required)

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -113,6 +113,7 @@ OgrePass.h \
 OgrePatchMesh.h \
 OgrePatchSurface.h \
 OgrePlane.h \
+OgrePlaneBoundedVolume.h \
 OgrePlatform.h \
 OgrePlatformManager.h \
 OgrePositionTarget.h \
