--- a/trunk/RenderSystems/GL/src/Makefile.am
+++ b/trunk/RenderSystems/GL/src/Makefile.am
@@ -20,6 +20,7 @@ RenderSystem_GL_so_SOURCES = OgreGLATIFSInit.cpp \
                              OgreGLTextureManager.cpp \
 							 OgreGLHardwareBufferManager.cpp \
 							 OgreGLHardwareIndexBuffer.cpp \
+							 OgreGLHardwareOcclusionQuery.cpp \
 							 OgreGLHardwareVertexBuffer.cpp \
                              OgreGLDefaultHardwareBufferManager.cpp
 
