Hardware occlusion query support from Lee Sandberg

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -59,6 +59,7 @@ OgreGpuProgramUsage.h \
 OgreHardwareBuffer.h \
 OgreHardwareBufferManager.h \
 OgreHardwareIndexBuffer.h \
+OgreHardwareOcclusionQuery.h \
 OgreHardwareVertexBuffer.h \
 OgreHighLevelGpuProgram.h \
 OgreHighLevelGpuProgramManager.h \
