--- a/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
+++ b/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
@@ -159,6 +159,9 @@
 				RelativePath="..\src\OgreD3D9HardwareIndexBuffer.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreD3D9HardwareOcclusionQuery.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreD3D9HardwareVertexBuffer.cpp">
 			</File>
 			<File
@@ -212,6 +215,9 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9HardwareIndexBuffer.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreD3D9HardwareOcclusionQuery.h">
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9HardwareVertexBuffer.h">
