Skeletally animated entities now take a copy of a skeleton as a SkeletonInstance, to allow easier manual manipulation of bones on entities.

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -154,6 +154,7 @@ OgreSimpleRenderable.h \
 OgreSimpleSpline.h \
 OgreSingleton.h \
 OgreSkeleton.h \
+OgreSkeletonInstance.h \
 OgreSkeletonFileFormat.h \
 OgreSkeletonManager.h \
 OgreSkeletonSerializer.h \
