--- a/trunk/Mac/XCode/Samples/Attic/plugins.cfg
+++ b/trunk/Mac/XCode/Samples/Attic/plugins.cfg
@@ -13,3 +13,4 @@ Plugin=Plugin_ParticleFX
 Plugin=Plugin_BSPSceneManager
 Plugin=Plugin_OctreeSceneManager
 Plugin=Plugin_NatureSceneManager
+Plugin=Plugin_CgProgramManager
