--- a/Mac/XCode/Samples/plugins.cfg
+++ b/Mac/XCode/Samples/plugins.cfg
@@ -13,3 +13,4 @@ Plugin=Plugin_ParticleFX
 Plugin=Plugin_BSPSceneManager
 Plugin=Plugin_OctreeSceneManager
 Plugin=Plugin_NatureSceneManager
+Plugin=Plugin_CgProgramManager
