--- a/Mac/XCode/Samples/resources.cfg
+++ b/Mac/XCode/Samples/resources.cfg
@@ -1,4 +1,4 @@
-FileSystem=../../../../../../../../Samples/Media/Mac
+FileSystem=../../../../../../../../Samples/Media/Normal
 Zip=../../../../../../../../Samples/Media/dragon.zip
 Zip=../../../../../../../../Samples/Media/knot.zip
 Zip=../../../../../../../../Samples/Media/skybox.zip
