Basic modulative stencil shadows working in D3D

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -125,6 +125,7 @@ OgreProgressiveMesh.h \
 OgreQuaternion.h \
 OgreRay.h \
 OgreRectangle.h \
+OgreRectangle2D.h \
 OgreRenderOperation.h \
 OgreRenderQueue.h \
 OgreRenderQueueListener.h \
