Patch from pjcast to allow dynamic textures and registration of external texture sources (e.g. video)

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -41,6 +41,8 @@ OgreEventProcessor.h \
 OgreEventQueue.h \
 OgreEventTarget.h \
 OgreException.h \
+OgreExternalTextureSource.h \
+OgreExternalTextureSourceManager.h \
 OgreFactoryObj.h \
 OgreFont.h \
 OgreFontManager.h \
