--- a/RenderSystems/GL/src/gtk/Makefile.am
+++ b/RenderSystems/GL/src/gtk/Makefile.am
@@ -1,6 +1,7 @@
 INCLUDES = $(STLPORT_CFLAGS) -I$(top_builddir)/RenderSystems/GL/include \
            -I$(top_builddir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
            -I$(top_builddir)/PlatformManagers/$(OGRE_PLATFORM)/include \
+           -I$(top_builddir)/RenderSystems/GL/include/$(OGRE_GLSUPPORT) \
            -I$(top_builddir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)
 
 noinst_LIBRARIES = libsupport.a
