Moved GTKWindow to the RenderSystem to be more like the other RenderSystems like SDL. This also removes the direct dependency on the GTK PlatformManager. (which it can theoretically even run without, as long as someone keeps the GTK event pump going). Also, a getCustomAttribute was added so applications (and GTKInput) can get the raw gtkmm widget and window ID.

--- a/RenderSystems/GL/src/gtk/Makefile.am
+++ b/RenderSystems/GL/src/gtk/Makefile.am
@@ -6,4 +6,4 @@ INCLUDES = $(STLPORT_CFLAGS) -I$(top_builddir)/RenderSystems/GL/include \
 
 noinst_LIBRARIES = libsupport.a
 
-libsupport_a_SOURCES = OgreGTKGLSupport.cpp
+libsupport_a_SOURCES = OgreGTKGLSupport.cpp OgreGTKWindow.cpp
