Supplemental commit (some changes to PlatformManager), GTKWindow was removed from here and moved to RenderSystem/GL, GTKInput doesn't depend directly on GTKWindow anymore but uses the getCustomAttribute to get the GTK widget. Furthermore, some changes have been done to GTKConfig to make it compile again

--- a/PlatformManagers/gtk/include/Attic/Makefile.am
+++ b/PlatformManagers/gtk/include/Attic/Makefile.am
@@ -1,5 +1,4 @@
 noinst_HEADERS = GTKConfig.h \
                  GTKError.h \
                  GTKInput.h \
-                 GTKTimer.h \
-                 GTKWindow.h
+                 GTKTimer.h
