--- a/PlatformManagers/gtk/include/Makefile.am
+++ b/PlatformManagers/gtk/include/Makefile.am
@@ -1,5 +1,4 @@
 noinst_HEADERS = GTKConfig.h \
                  GTKError.h \
                  GTKInput.h \
-                 GTKTimer.h \
-                 GTKWindow.h
+                 GTKTimer.h
