Updated the demo to work again. It shows how to embed Ogre in an GTK application, attaching the Ogre widget whereever the developer wants, and how to choose the GL rendersystem without user intervention. It compiles cleanly now.

--- a/Samples/GTKDemo/src/Attic/Makefile.am
+++ b/Samples/GTKDemo/src/Attic/Makefile.am
@@ -1,5 +1,9 @@
-noinst_PROGRAMS=GTKDemo
-INCLUDES=-I$(top_builddir)/PlatformManagers/gtk/include -I$(top_builddir)/Samples/Common/include $(PLATFORM_CFLAGS)
-GTKDemo_SOURCES=GTKDemo.cpp
-GTKDemo_LDFLAGS=-L$(top_builddir)/PlatformManagers/gtk/src/.libs -L$(top_builddir)/OgreMain/src
-GTKDemo_LDADD=-lOgreMain -lOgrePlatform
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/Samples/GTKDemo/include -I$(top_srcdir)/OgreMain/include -I$(top_srcdir)/Samples/Common/include $(PLATFORM_CFLAGS)
+
+noinst_PROGRAMS = GTKDemo
+GTKDemo_SOURCES = GTKDemo.cpp
+GTKDemo_LDFLAGS = -L$(top_srcdir)/OgreMain/src $(PLATFORM_LIBS)
+GTKDemo_LDADD = -lOgreMain
+
+install-exec-local:
+	$(INSTALL_PROGRAM) .libs/GTKDemo $(top_builddir)/Samples/Common/bin/GTKDemo
