Preparation for additive stencil lighting: - categorise solid passes by illumination stage - compile techniques into illumination stage passes as well as regular passes - add some qualifiers to materials even when they use vertex / fragment programs to allow classification to be done - some refactoring of render queue to make this tidier

--- a/OgreMain/scripts/OgreMain.vcproj
+++ b/OgreMain/scripts/OgreMain.vcproj
@@ -468,6 +468,9 @@ copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)
 				RelativePath="..\src\OgreRenderQueue.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreRenderQueueSortingGrouping.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreRenderSystem.cpp">
 			</File>
 			<File
