Removed spot_shadow_fade.png and embedded its contents in a header; this way people can't forget to include it in their media locations.

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -163,6 +163,7 @@ OgreSkeletonFileFormat.h \
 OgreSkeletonManager.h \
 OgreSkeletonSerializer.h \
 OgreSphere.h \
+OgreSpotShadowFadePng.h \
 OgreStableHeaders.h \
 OgreStaticFaceGroup.h \
 OgreStdHeaders.h \
