- Vertex program accelerated shadow volume extrusion (to infinity) - Infinite far plane projection on Frustum/Camera, automatically enabled when using vertex program extrusion - Bugfix in SceneManager::destroyAnimation - Bugfix to crash in GL when no program syntaxes are supported

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -153,6 +153,7 @@ OgreScrollEvent.h \
 OgreScrollTarget.h \
 OgreSerializer.h \
 OgreShadowCaster.h \
+OgreShadowVolumeExtrudeProgram.h \
 OgreSharedPtr.h \
 OgreSimpleRenderable.h \
 OgreSimpleSpline.h \
