--- a/OgreMain/scripts/OgreMain.vcproj
+++ b/OgreMain/scripts/OgreMain.vcproj
@@ -522,6 +522,9 @@ copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)
 				RelativePath="..\src\OgreShadowCaster.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreShadowVolumeExtrudeProgram.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreSimpleRenderable.cpp">
 			</File>
 			<File
@@ -1087,6 +1090,9 @@ copy $(OutDir)\$(TargetFileName) ..\..\Tools\Common\bin\$(ConfigurationName)
 			</File>
 			<File
 				RelativePath="..\include\OgreShadowCaster.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreShadowVolumeExtrudeProgram.h">
 			</File>
 			<File
 				RelativePath="..\include\OgreSharedPtr.h">
